Fixed text wrapping for privacy policy button

--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,10 @@ p{
     text-align: center;
 }
 
+a{
+    white-space: nowrap;
+}
+
 a:link{
     color: deepskyblue;
 }
